# dgpo

./: .gitignore  LICENSE  README.md  infer.py  package.json  pyproject.toml  template.yaml
scripts/: download.sh  test_dgpo.sh  train_dgpo.sh
src/components/: header.jsx  overview.jsx
src/scss/: theme.scss
verl/single_controller/ray/: base.py
verl/trainer/: main_ppo.py
verl/trainer/config/: ppo_trainer.yaml
verl/trainer/ppo/: core_algos.py  ray_trainer.py
verl/workers/: fsdp_workers.py
verl/workers/actor/: dp_actor.py
